@@ -333,6 +333,7 @@ class CMDObj(cmd.Cmd, object):
                     self.client_prog_inst.add_default_items()
                 except Exception as ex:
                     print("read", afile, ex)
+            self.client_prog_inst.resolve_index_inheritance()
         else:
             self.help_read()
         return False
@@ -428,7 +429,7 @@ class CMDObj(cmd.Cmd, object):
                 if param not in self.client_prog_inst.install_definitions_index:
                     print(text_with_color(param, 'green'), "not in index")
                     continue
-                depend_list = list()
+                depend_list = unique_list()
                 self.client_prog_inst.needs(param, depend_list)
                 if not depend_list:
                     depend_list = ("no one",)
@@ -454,7 +455,7 @@ class CMDObj(cmd.Cmd, object):
 
     def help_depend(self):
         print("depend [identifier, ...]")
-        print("    dependecies for an item")
+        print("    dependencies for an item")
 
     def do_sync(self, params):
         out_file = "stdout"
